syntax = "proto3";

option csharp_namespace = "SunShop.Grpc.Users.Protos";

package SunShop;

service Users {
    rpc GetUsers (GetUsersRequest) returns (stream UserResponse);    
    rpc GetUser (GetUserRequest) returns (UserResponse);    
    rpc CreateUser (CreateUserRequest) returns (UserResponse);
    rpc UpdateUser (UpdateUserRequest) returns (UserResponse);
    rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
}

message GetUsersRequest {
 int32 page_number = 1;
 int32 page_size = 2;
 bool active_only = 3;
}

message GetUserRequest {
  int32 id = 1;
}

message CreateUserRequest {
  string Email = 1;
  string FirstName = 2;
  string LastName = 3;
  string Password = 4;
  string Role = 5;
}

message UpdateUserRequest {
  int32 id = 1;
  string Email = 2;
  string FirstName = 3;
  string LastName = 4;
  string Role = 5;
  bool is_active = 6;
}

message DeleteUserRequest {
  int32 id = 1;
}

message UserResponse {
  int32 id = 1;
  string Email = 2;
  string FirstName = 3;
  string LastName = 4;
  string Role = 5;
  string created_at = 6;
  string LastLogin = 7;
  bool is_active = 8;
}

message DeleteUserResponse {
   bool success = 1;
  string message = 2;
}